--- a/sycl/Dockerfile
+++ b/sycl/Dockerfile
@@ -7,6 +7,6 @@ RUN pacman-key --init
 RUN pacman -Syu --noconfirm --needed                                                        \
     gcc nano cmake git intel-oneapi-compiler-dpcpp-cpp-runtime-libs intel-oneapi-dpcpp-cpp
 
-RUN pacman -Syu --noconfirm --needed ninja
+RUN pacman -Syu --noconfirm --needed ninja python
 
 RUN rm -rf /var/cache/pacman/pkg/
